--- a/src/Modules/CrestApps.OrchardCore.AI.Documents/Views/AIProfileDocuments.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Documents/Views/AIProfileDocuments.Edit.cshtml
@@ -1,6 +1,6 @@
 @using CrestApps.OrchardCore.AI.Core
 @using CrestApps.OrchardCore.AI.Core.Models
-@using CrestApps.OrchardCore.AI.ViewModels
+@using CrestApps.OrchardCore.AI.Documents.ViewModels
 @using Microsoft.Extensions.Options
 @using OrchardCore
 
