--- a/src/Modules/CrestApps.OrchardCore.AI.DataSources/Views/AIDataSourceSettings.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.DataSources/Views/AIDataSourceSettings.Edit.cshtml
@@ -3,6 +3,8 @@
 
 @model AIDataSourceSettingsViewModel
 
+<h4>@T["Data Source Settings"]</h4>
+
 <div class="@Orchard.GetWrapperClasses()">
     <div class="@Orchard.GetEndClasses(true)">
         <div class="form-check">
