--- a/src/Modules/CrestApps.OrchardCore.AI.Documents/Views/InteractionDocumentSettings.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Documents/Views/InteractionDocumentSettings.Edit.cshtml
@@ -3,6 +3,7 @@
 
 @model InteractionDocumentSettingsViewModel
 
+<h4>@T["Documents Settings"]</h4>
 @if (!Model.IndexProfiles.Any())
 {
     <div class="alert alert-warning" role="alert">
